--- a/src/presentations/pages/Beverages/index.pug
+++ b/src/presentations/pages/Beverages/index.pug
@@ -21,75 +21,75 @@ block body
           .Beverages--Content--List--Item--RecipeList
             .Beverages--Content--List--Item--RecipeList--Item
               .Beverages--Content--List--Item--RecipeList--Item--Hot HOT
-              .Beverages--Content--List--Item--RecipeList--Item--Link RECIPE
+              a.Beverages--Content--List--Item--RecipeList--Item--Link(href="#") RECIPE
             .Beverages--Content--List--Item--RecipeList--Item
               .Beverages--Content--List--Item--RecipeList--Item--Iced ICED
-              .Beverages--Content--List--Item--RecipeList--Item--Link RECIPE
+              a.Beverages--Content--List--Item--RecipeList--Item--Link(href="#") RECIPE
         .Beverages--Content--List--Item
           .Beverages--Content--List--Item--Title COLD BREW
           .Beverages--Content--List--Item--RecipeList
             .Beverages--Content--List--Item--RecipeList--Item
               .Beverages--Content--List--Item--RecipeList--Item--Iced ICED
-              .Beverages--Content--List--Item--RecipeList--Item--Link RECIPE
+              a.Beverages--Content--List--Item--RecipeList--Item--Link(href="#") RECIPE
         .Beverages--Content--List--Item
           .Beverages--Content--List--Item--Title LATTE
           .Beverages--Content--List--Item--RecipeList
             .Beverages--Content--List--Item--RecipeList--Item
               .Beverages--Content--List--Item--RecipeList--Item--Hot HOT
-              .Beverages--Content--List--Item--RecipeList--Item--Link RECIPE
+              a.Beverages--Content--List--Item--RecipeList--Item--Link(href="#") RECIPE
             .Beverages--Content--List--Item--RecipeList--Item
               .Beverages--Content--List--Item--RecipeList--Item--Iced ICED
-              .Beverages--Content--List--Item--RecipeList--Item--Link RECIPE
+              a.Beverages--Content--List--Item--RecipeList--Item--Link(href="#") RECIPE
         .Beverages--Content--List--Item
           .Beverages--Content--List--Item--Title AMERICANO
           .Beverages--Content--List--Item--RecipeList
             .Beverages--Content--List--Item--RecipeList--Item
               .Beverages--Content--List--Item--RecipeList--Item--Hot HOT
-              .Beverages--Content--List--Item--RecipeList--Item--Link RECIPE
+              a.Beverages--Content--List--Item--RecipeList--Item--Link(href="#") RECIPE
             .Beverages--Content--List--Item--RecipeList--Item
               .Beverages--Content--List--Item--RecipeList--Item--Iced ICED
-              .Beverages--Content--List--Item--RecipeList--Item--Link RECIPE
+              a.Beverages--Content--List--Item--RecipeList--Item--Link(href="#") RECIPE
         .Beverages--Content--List--Item
           .Beverages--Content--List--Item--Title CAPPUCCINO
           .Beverages--Content--List--Item--RecipeList
             .Beverages--Content--List--Item--RecipeList--Item
               .Beverages--Content--List--Item--RecipeList--Item--Hot HOT
-              .Beverages--Content--List--Item--RecipeList--Item--Link RECIPE
+              a.Beverages--Content--List--Item--RecipeList--Item--Link(href="#") RECIPE
             .Beverages--Content--List--Item--RecipeList--Item
               .Beverages--Content--List--Item--RecipeList--Item--Iced ICED
-              .Beverages--Content--List--Item--RecipeList--Item--Link RECIPE
+              a.Beverages--Content--List--Item--RecipeList--Item--Link(href="#") RECIPE
         .Beverages--Content--List--Item
           .Beverages--Content--List--Item--Title MOCHA
           .Beverages--Content--List--Item--RecipeList
             .Beverages--Content--List--Item--RecipeList--Item
               .Beverages--Content--List--Item--RecipeList--Item--Hot HOT
-              .Beverages--Content--List--Item--RecipeList--Item--Link RECIPE
+              a.Beverages--Content--List--Item--RecipeList--Item--Link(href="#") RECIPE
             .Beverages--Content--List--Item--RecipeList--Item
               .Beverages--Content--List--Item--RecipeList--Item--Iced ICED
-              .Beverages--Content--List--Item--RecipeList--Item--Link RECIPE
+              a.Beverages--Content--List--Item--RecipeList--Item--Link(href="#") RECIPE
         .Beverages--Content--List--Item
           .Beverages--Content--List--Item--Title VANILLA LATTE
           .Beverages--Content--List--Item--RecipeList
             .Beverages--Content--List--Item--RecipeList--Item
               .Beverages--Content--List--Item--RecipeList--Item--Hot HOT
-              .Beverages--Content--List--Item--RecipeList--Item--Link RECIPE
+              a.Beverages--Content--List--Item--RecipeList--Item--Link(href="#") RECIPE
             .Beverages--Content--List--Item--RecipeList--Item
               .Beverages--Content--List--Item--RecipeList--Item--Iced ICED
-              .Beverages--Content--List--Item--RecipeList--Item--Link RECIPE
+              a.Beverages--Content--List--Item--RecipeList--Item--Link(href="#") RECIPE
         .Beverages--Content--List--Item
           .Beverages--Content--List--Item--Title COCOA
           .Beverages--Content--List--Item--RecipeList
             .Beverages--Content--List--Item--RecipeList--Item
               .Beverages--Content--List--Item--RecipeList--Item--Hot HOT
-              .Beverages--Content--List--Item--RecipeList--Item--Link RECIPE
+              a.Beverages--Content--List--Item--RecipeList--Item--Link(href="#") RECIPE
             .Beverages--Content--List--Item--RecipeList--Item
               .Beverages--Content--List--Item--RecipeList--Item--Iced ICED
-              .Beverages--Content--List--Item--RecipeList--Item--Link RECIPE
+              a.Beverages--Content--List--Item--RecipeList--Item--Link(href="#") RECIPE
         .Beverages--Content--List--Item
           .Beverages--Content--List--Item--Title ESPRESSO
           .Beverages--Content--List--Item--RecipeList
             .Beverages--Content--List--Item--RecipeList--Item
               .Beverages--Content--List--Item--RecipeList--Item--Hot HOT
-              .Beverages--Content--List--Item--RecipeList--Item--Link RECIPE
+              a.Beverages--Content--List--Item--RecipeList--Item--Link(href="#") RECIPE
       .Beverages--Content--CategoryTitle
     +Footer(lang)
