--- a/src/presentations/pages/Foods/index.pug
+++ b/src/presentations/pages/Foods/index.pug
@@ -20,6 +20,6 @@ block body
           .Foods--Content--List--Item--Title MADELEINE
           .Foods--Content--List--Item--RecipeList
             .Foods--Content--List--Item--RecipeList--Item
-              .Foods--Content--List--Item--RecipeList--Item--Link RECIPE
+              a.Foods--Content--List--Item--RecipeList--Item--Link(href="#") RECIPE
       .Foods--Content--CategoryTitle
     +Footer(lang)
