--- a/src/presentations/components/Header.pug
+++ b/src/presentations/components/Header.pug
@@ -2,9 +2,9 @@ mixin Header(lang)
   header.Header
     ul.Header--LangList
       li.Header--LangList--Item(class= lang === 'ja' ? 'Header--LangList--Item__Active' : '')
-        a(href="?lang=ja") JA
+        a(href="?lang=ja") 日本語
       li.Header--LangList--Item(class= lang === 'en' ? 'Header--LangList--Item__Active' : '')
-        a(href="?lang=en") EN
+        a(href="?lang=en") ENGLISH
     a.Header--Link(href="/")
       h1.Header--Link--Logo
         .Header--Link--Logo--Text
