--- a/src/presentations/components/Navigation.pug
+++ b/src/presentations/components/Navigation.pug
@@ -2,12 +2,12 @@ mixin Navigation(path, dic)
   nav.Navigation
     ul.Navigation--List
       li.Navigation--List--Item(class= path === '/beverages' ? 'Navigation--List--Item__Active' : '')
-        a.Navigation--List--Item--Link(href="/beverages")= dic.t('navigation.BEVERAGES')
+        a.Navigation--List--Item--Link(href="/beverages")= dic.t('Navigation.BEVERAGES')
       li.Navigation--List--Item(class= path === '/foods' ? 'Navigation--List--Item__Active' : '')
-        a.Navigation--List--Item--Link(href="/foods")= dic.t('navigation.FOODS')
+        a.Navigation--List--Item--Link(href="/foods")= dic.t('Navigation.FOODS')
       //- li.Navigation--List--Item(class= path === '/beans' ? 'Navigation--List--Item__Active' : '')
-      //-   a.Navigation--List--Item--Link(href="/beans")= dic.t('navigation.BEANS')
+      //-   a.Navigation--List--Item--Link(href="/beans")= dic.t('Navigation.BEANS')
       li.Navigation--List--Item(class= path === '/goods' ? 'Navigation--List--Item__Active' : '')
-        a.Navigation--List--Item--Link(href="/goods")= dic.t('navigation.GOODS')
-      li.Navigation--List--Item(class= path === '/knowledge' ? 'Navigation--List--Item__Active' : '')
-        a.Navigation--List--Item--Link(href="/knowledge")= dic.t('navigation.KNOWLEDGE')
+        a.Navigation--List--Item--Link(href="/goods")= dic.t('Navigation.GOODS')
+      //- li.Navigation--List--Item(class= path === '/knowledge' ? 'Navigation--List--Item__Active' : '')
+      //-   a.Navigation--List--Item--Link(href="/knowledge")= dic.t('Navigation.KNOWLEDGE')
