--- a/src/presentations/pages/Foods/index.css
+++ b/src/presentations/pages/Foods/index.css
@@ -2,6 +2,7 @@
 @import 'components/Header';
 @import 'components/Footer';
 @import 'components/Navigation';
+@import 'components/RecipeLink';
 
 .Foods {
   background-color: $color-background;
@@ -75,26 +76,6 @@
                 width: 0.5rem;
                 height: 0.5rem;
                 border-radius: 50%;
-              }
-            }
-
-            .Foods--Content--List--Item--RecipeList--Item--Link {
-              display: inline-block;
-              color: $color-white;
-              background-color: $color-text;
-              padding: 8px 24px;
-              width: 6rem;
-              font-size: 0.75rem;
-              text-align: center;
-              border-radius: 17px;
-              transition: opacity 200ms ease-out;
-
-              &:hover {
-                opacity: 0.8;
-              }
-
-              &:active {
-                opacity: 0.6;
               }
             }
 
