--- a/src/presentations/application/vars.css
+++ b/src/presentations/application/vars.css
@@ -10,6 +10,7 @@ $color-divider: #e0e0e0;
 
 $color-hot: #ef5350;
 $color-iced: #42a5f5;
+$color-note: #fff9c4;
 
 $radius: 4px;
 $shadow: 0 1px 1px 0 $color-shadow;
