--- a/src/presentations/components/Navigation.pug
+++ b/src/presentations/components/Navigation.pug
@@ -1,13 +1,9 @@
 mixin Navigation(path, dic)
   nav.Navigation
     ul.Navigation--List
-      li.Navigation--List--Item(class= path === '/beverages' ? 'Navigation--List--Item__Active' : '')
+      li.Navigation--List--Item(class= path.indexOf('/beverages') === 0 ? 'Navigation--List--Item__Active' : '')
         a.Navigation--List--Item--Link(href="/beverages")= dic.t('Navigation.BEVERAGES')
-      li.Navigation--List--Item(class= path === '/foods' ? 'Navigation--List--Item__Active' : '')
+      li.Navigation--List--Item(class= path.indexOf('/foods') === 0 ? 'Navigation--List--Item__Active' : '')
         a.Navigation--List--Item--Link(href="/foods")= dic.t('Navigation.FOODS')
-      //- li.Navigation--List--Item(class= path === '/beans' ? 'Navigation--List--Item__Active' : '')
-      //-   a.Navigation--List--Item--Link(href="/beans")= dic.t('Navigation.BEANS')
-      li.Navigation--List--Item(class= path === '/goods' ? 'Navigation--List--Item__Active' : '')
+      li.Navigation--List--Item(class= path.indexOf('/goods') === 0 ? 'Navigation--List--Item__Active' : '')
         a.Navigation--List--Item--Link(href="/goods")= dic.t('Navigation.GOODS')
-      //- li.Navigation--List--Item(class= path === '/knowledge' ? 'Navigation--List--Item__Active' : '')
-      //-   a.Navigation--List--Item--Link(href="/knowledge")= dic.t('Navigation.KNOWLEDGE')
