Adjust Picture component

--- a/src/presentations/components/Picture.css
+++ b/src/presentations/components/Picture.css
@@ -24,6 +24,11 @@
     object-fit: cover;
   }
 
+  span.Picture--Image {
+    color: $color-white;
+    padding: 12px;
+  }
+
   &.Picture__Ready {
     background: $color-shadow;
   }
