Refactor Picture component

--- a/src/presentations/components/Picture.css
+++ b/src/presentations/components/Picture.css
@@ -36,6 +36,10 @@
   &.Picture__Loaded {
     background: none;
   }
+
+  &.Picture__Failed {
+    background: $color-shadow;
+  }
 }
 
 @keyframes blink {
