--- a/src/presentations/application/layout.pug
+++ b/src/presentations/application/layout.pug
@@ -4,7 +4,7 @@ block import
 
 block vars
 
-html(lang=dic.lang)
+html(lang=lang)
   head
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
@@ -16,7 +16,7 @@ html(lang=dic.lang)
     meta(name="description" content=description)
     meta(name="author" content=config.author)
     meta(name="keywords" content=config.keywords)
-    link(rel="alternate" type="application/rss+xml" title="RSS 2.0" href="/rss")
+    link(rel="alternate" type="application/rss+xml" title="RSS 2.0" href=`/rss?lang=${lang}`)
 
     //- OGP
     meta(property="og:site_name" content=config.name)
