--- a/src/presentations/pages/Beverages/index.pug
+++ b/src/presentations/pages/Beverages/index.pug
@@ -17,80 +17,20 @@ block body
       .Beverages--Content--CategoryTitle
         h2= dic.t('Beverages.BEVERAGES')
       .Beverages--Content--List
-        .Beverages--Content--List--Item
-          .Beverages--Content--List--Item--Title= dic.t('Beverages.COFFEE')
-          .Beverages--Content--List--Item--RecipeList
-            .Beverages--Content--List--Item--RecipeList--Item
-              .Beverages--Content--List--Item--RecipeList--Item--Hot HOT
-              +RecipeLink('/beverages/coffee/hot', dic)
-            .Beverages--Content--List--Item--RecipeList--Item
-              .Beverages--Content--List--Item--RecipeList--Item--Iced ICED
-              +RecipeLink('#', dic)
-        .Beverages--Content--List--Item
-          .Beverages--Content--List--Item--Title= dic.t('Beverages.COLD_BREW')
-          .Beverages--Content--List--Item--RecipeList
-            .Beverages--Content--List--Item--RecipeList--Item
-              .Beverages--Content--List--Item--RecipeList--Item--Iced ICED
-              +RecipeLink('#', dic)
-        .Beverages--Content--List--Item
-          .Beverages--Content--List--Item--Title= dic.t('Beverages.LATTE')
-          .Beverages--Content--List--Item--RecipeList
-            .Beverages--Content--List--Item--RecipeList--Item
-              .Beverages--Content--List--Item--RecipeList--Item--Hot HOT
-              +RecipeLink('#', dic)
-            .Beverages--Content--List--Item--RecipeList--Item
-              .Beverages--Content--List--Item--RecipeList--Item--Iced ICED
-              +RecipeLink('#', dic)
-        .Beverages--Content--List--Item
-          .Beverages--Content--List--Item--Title= dic.t('Beverages.AMERICANO')
-          .Beverages--Content--List--Item--RecipeList
-            .Beverages--Content--List--Item--RecipeList--Item
-              .Beverages--Content--List--Item--RecipeList--Item--Hot HOT
-              +RecipeLink('#', dic)
-            .Beverages--Content--List--Item--RecipeList--Item
-              .Beverages--Content--List--Item--RecipeList--Item--Iced ICED
-              +RecipeLink('#', dic)
-        .Beverages--Content--List--Item
-          .Beverages--Content--List--Item--Title= dic.t('Beverages.CAPPUCCINO')
-          .Beverages--Content--List--Item--RecipeList
-            .Beverages--Content--List--Item--RecipeList--Item
-              .Beverages--Content--List--Item--RecipeList--Item--Hot HOT
-              +RecipeLink('#', dic)
-            .Beverages--Content--List--Item--RecipeList--Item
-              .Beverages--Content--List--Item--RecipeList--Item--Iced ICED
-              +RecipeLink('#', dic)
-        .Beverages--Content--List--Item
-          .Beverages--Content--List--Item--Title= dic.t('Beverages.MOCHA')
-          .Beverages--Content--List--Item--RecipeList
-            .Beverages--Content--List--Item--RecipeList--Item
-              .Beverages--Content--List--Item--RecipeList--Item--Hot HOT
-              +RecipeLink('#', dic)
-            .Beverages--Content--List--Item--RecipeList--Item
-              .Beverages--Content--List--Item--RecipeList--Item--Iced ICED
-              +RecipeLink('#', dic)
-        .Beverages--Content--List--Item
-          .Beverages--Content--List--Item--Title= dic.t('Beverages.VANILLA_LATTE')
-          .Beverages--Content--List--Item--RecipeList
-            .Beverages--Content--List--Item--RecipeList--Item
-              .Beverages--Content--List--Item--RecipeList--Item--Hot HOT
-              +RecipeLink('#', dic)
-            .Beverages--Content--List--Item--RecipeList--Item
-              .Beverages--Content--List--Item--RecipeList--Item--Iced ICED
-              +RecipeLink('#', dic)
-        .Beverages--Content--List--Item
-          .Beverages--Content--List--Item--Title= dic.t('Beverages.COCOA')
-          .Beverages--Content--List--Item--RecipeList
-            .Beverages--Content--List--Item--RecipeList--Item
-              .Beverages--Content--List--Item--RecipeList--Item--Hot HOT
-              +RecipeLink('#', dic)
-            .Beverages--Content--List--Item--RecipeList--Item
-              .Beverages--Content--List--Item--RecipeList--Item--Iced ICED
-              +RecipeLink('#', dic)
-        .Beverages--Content--List--Item
-          .Beverages--Content--List--Item--Title= dic.t('Beverages.ESPRESSO')
-          .Beverages--Content--List--Item--RecipeList
-            .Beverages--Content--List--Item--RecipeList--Item
-              .Beverages--Content--List--Item--RecipeList--Item--Hot HOT
-              +RecipeLink('#', dic)
+        for beverage in beverages
+          .Beverages--Content--List--Item
+            .Beverages--Content--List--Item--Title= beverage.name
+            .Beverages--Content--List--Item--RecipeList
+              if beverage.default
+                .Beverages--Content--List--Item--RecipeList--Item
+                  +RecipeLink(beverage.default.url, dic)
+              if beverage.hot
+                .Beverages--Content--List--Item--RecipeList--Item
+                  .Beverages--Content--List--Item--RecipeList--Item--Hot= dic.t('Recipe.HOT')
+                  +RecipeLink(beverage.hot.url, dic)
+              if beverage.iced
+                .Beverages--Content--List--Item--RecipeList--Item
+                  .Beverages--Content--List--Item--RecipeList--Item--Iced= dic.t('Recipe.ICED')
+                  +RecipeLink(beverage.iced.url, dic)
       .Beverages--Content--CategoryTitle
     +Footer(lang)
