Adjust heading for Menu template

--- a/src/presentations/templates/Menu/index.pug
+++ b/src/presentations/templates/Menu/index.pug
@@ -15,7 +15,7 @@ block body
     +Navigation(path, dic)
     .Menu--Content
       .Menu--Content--CategoryTitle
-        h2= title
+        h2= heading
       .Menu--Content--List
         for item in items
           .Menu--Content--List--Item
