Adjust Recipe template styling

--- a/src/presentations/templates/Recipe/index.css
+++ b/src/presentations/templates/Recipe/index.css
@@ -144,6 +144,7 @@
           content: '';
           position: absolute;
           display: inline-block;
+          background-color: $color-divider;
         }
 
         &:before {
