--- a/src/presentations/templates/Recipe/index.pug
+++ b/src/presentations/templates/Recipe/index.pug
@@ -24,8 +24,9 @@ block body
     .Recipe--Content
       .Recipe--Content--Title
         h2= recipe.name
-        div
-          .Recipe--Content--Title--Type(class= recipe.type === dic.t('Recipe.HOT') ? 'Recipe--Content--Title--Type__Hot' : 'Recipe--Content--Title--Type__Iced')= recipe.type
+        if recipe.type
+          div
+            .Recipe--Content--Title--Type(class= recipe.type === dic.t('Recipe.HOT') ? 'Recipe--Content--Title--Type__Hot' : 'Recipe--Content--Title--Type__Iced')= recipe.type
 
       .Recipe--Content--Ingredient
         .Recipe--Content--Ingredient--Title= dic.t('Recipe.INGREDIENTS')
@@ -39,7 +40,7 @@ block body
 
       .Recipe--Content--StepList
         for step in recipe.steps
-          .Recipe--Content--StepList--Item(class= recipe.type === dic.t('Recipe.HOT') ? 'Recipe--Content--StepList--Item__Hot' : 'Recipe--Content--StepList--Item__Iced')
+          .Recipe--Content--StepList--Item(class= recipe.type === dic.t('Recipe.HOT') ? 'Recipe--Content--StepList--Item__Hot' : (recipe.type === dic.t('Recipe.ICED') ? 'Recipe--Content--StepList--Item__Iced' : ''))
             .Recipe--Content--StepList--Item--Summary= step.summary
             .Recipe--Content--StepList--Item--Description= step.description
             if step.note
